# mfti_task

./: .gitignore  CMakeLists.txt
chart/: CMakeLists.txt
chart/qml/: chart_main.qml  qml.qrc
chart/src/: backend.cpp  backend.h  main.cpp
random_array/: CMakeLists.txt
random_array/qml/: main.qml  qml.qrc
random_array/src/: backend.cpp  backend.h  main.cpp  worker.cpp  worker.h
random_array/test/: CMakeLists.txt  test_worker.cpp
table/: CMakeLists.txt
table/qml/: main.qml  qml.qrc  table_main.qml
table/src/: backend.cpp  backend.h  main.cpp
table/test/: CMakeLists.txt  test_table_backend.cpp
